# covida

./: .gitignore  ProjectHome.md  config.xml  pom.xml
CoVidA/: nb-configuration.xml  nbactions-Covida EEE Slate.xml  nbactions-Covida TW Table.xml  nbactions-Covida Touch and Write Table.xml  nbactions-Covida.xml  pom.xml  properties.cfg
CoVidA/src/main/resources/: config.xml  de_DE-ak-cur.res  en_US-ak-cur.res  en_US-ak-hpr.res  en_US-lk-free.res  en_US-lk-grm.res  en_US-lk-standard_lexicon.res  furniture-lexicon.res  metric-lexicon.res  radlex-de_de.wlist  recommendation.res  recommendation.wlist  settings.properties  size_in_cm.res  touchandwrite.xml
CoVidA/vlc/sdk/lib/: libvlccore.lib
covida-core/: Robotics Innovation Center 2010.mp4.xml  config.xml  pom.xml
covida-core/covida-core/: pom.xml
covida-flvcreator/: FLV Creator Client Demo Port 2345.lnk  FLV Creator Server Port 2345.lnk  nbactions-TCPServerStandalone.xml  output.flv  pom.xml  readme.txt
covida-introduction-tex/: LaTeX2.tex  covida.tps  document.aux  document.blg  document.tex
covida-project-tex/: architecture.aux  architecture.tex  architecture.vsd  conclusion.aux  covida-project-tex.aux  covida-project-tex.blg  covida-project-tex.tcp  covida-project-tex.tex  covida-project-tex.tps  diagram.1  diagram.mp  implementation.aux  intro.aux  intro.tex  ~$$architecture.~vsd
covida-res/: classes.xml  config.xml  rdf.xml
covida-res/hwr-res/: radlex-de_de.wlist
covida-res/videos/: Collaborative Video Annotation.mp4.anvil  Collaborative Video Annotation.mp4.xml  Collaborative Video Annotation.mp4_1000000_5000000.flv  Collaborative Video Annotation.mp4_20000000_25000000.flv  Collaborative Video Annotation.mp4_5000000_15000000.flv  Collaborative Video Annotation.mp4_9000000_25000000.flv  ERmedMedicoVision.avi  RadSpeech DFKI(360p_H.264-AAC).mp4.anvil  RadSpeech DFKI(360p_H.264-AAC).mp4.xml  RadSpeech DFKI(360p_H.264-AAC).mp4_spec.xlm  planar-video.avi  sagittal-video.avi  scan1.avi
covida-streamclient/: nbactions.xml  pom.xml
covida-thirdparty/: pom.xml
covida-thirdparty/ermed/: pom.xml
covida-thirdparty/javafx/: pom.xml
covida-thirdparty/jme-2.1/: pom.xml
covida-thirdparty/jme-2.1/conf/: jWebSocket.xml  log4j.properties  log4j.xml
covida-thirdparty/jme-2.1/libs/scenemonitor/: Release Notes.txt
covida-thirdparty/jme3/: pom.xml
covida-thirdparty/jme3/javadoc/: allclasses-frame.html  constant-values.html  help-doc.html  serialized-form.html
covida-thirdparty/jme3/javadoc/index-files/: index-11.html  index-12.html  index-18.html  index-21.html  index-25.html  index-26.html  index-3.html  index-4.html  index-5.html  index-6.html  index-9.html
covida-thirdparty/touchandwrite/: pom.xml
covida-thirdparty/touchandwrite-3rdparty/: pom.xml
covida-thirdparty/touchandwrite/lib/: anoto-pen-0.9.pom  ccv-adapter-0.9.pom  flosc-0.9.pom  pr-toolbox-0.9.pom  touchandwrite-common-0.9.pom  touchandwrite-eventmanager-0.9.pom  touchandwrite-input-0.9.pom  touchandwrite-inputanalyser-0.9.pom  touchandwrite-remote-0.9.pom  touchandwrite-sdk-0.9.pom  touchandwrite-server-0.9.pom  windows-input-adapter-0.9.pom
covida-thirdparty/vlcj-2.1.0/: pom.xml
covida-video-vlcj/: pom.xml
covida-visual/: pom.xml
covida-visual-javafx/: nbactions.xml  pom.xml
covida-visual-jme2/: nb-configuration.xml  nbactions-Covida.xml  nbactions.xml  pom.xml
covida-visual-jme2/bin-res/: CoVidA EEE Slate.bat  CoVidA TW Table.bat  readme.txt  silent.vbs
covida-visual-jme2/conf/: app.properties
covida-visual-jme2/hwr-res/: de_DE-ak-cur.res  en_GB-ak-cur.res
covida-visual-jme2/src/main/resources/: log4j.xml
covida-visual-jme3-mvn/: nbactions.xml  pom.xml
covida-visual-jme3/nbproject/: build-impl.xml  genfiles.properties  project.xml
covida-visual-swing-embedded/: nbactions.xml  pom.xml
covida-visual-swing-rendered/: pom.xml
covida-visual/hwr-res/: radlex-eng.wlist  shk-standard.res
covida-visual/vlc/sdk/lib/: libvlc.lib
covide-native-interface/: pom.xml
covide-native-interface/src/main/native/: CMakeLists.txt
covide-native-interface/src/main/native/include/: CovidaNativeInterface.h  algorithm.h  de_dfki_covida_NativeInterface.h  de_dfki_covida_NativeInterface_ShutdownHook.h  stdafx.h
covide-native-interface/src/main/native/src/: CovidaNativeInterface.cpp  algorithm.cpp  dllmain.cpp  stdafx.cpp  test.cpp
jme3/javadoc/: allclasses-noframe.html  deprecated-list.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  package-list
jme3/javadoc/checkers/quals/: DefaultLocation.html  DefaultQualifierInHierarchy.html  TypeQualifier.html  Unqualified.html  package-frame.html  package-use.html
jme3/javadoc/index-files/: index-1.html  index-10.html  index-13.html  index-14.html  index-15.html  index-16.html  index-17.html  index-19.html  index-2.html  index-20.html  index-22.html  index-23.html  index-24.html  index-7.html  index-8.html
jme3/javadoc/jme3test/android/: DemoLaunchAdapter.html  DemoLaunchEntry.html  DemoMainActivity.html  R.array.html  R.html  R.id.html  R.layout.html  R.raw.html  TestAmbient.html  TestMovingParticle.html  package-use.html
jme3/javadoc/jme3tools/converters/: FolderConverter.html  RGB565.html  package-use.html
jme3/javadoc/jme3tools/navigation/: Coordinate.html  RLSailing.html  StringUtil.html  package-frame.html  package-summary.html
jme3/javadoc/jme3tools/optimize/: FastOctnode.html  OCTTriangle.html  TestCollector.html  TextureAtlas.html  package-frame.html  package-tree.html
jme3/javadoc/jme3tools/savegame/: package-summary.html
jme3/javadoc/jme3tools/shader/: ShaderDebug.html  package-frame.html  package-summary.html
jme3/javadoc/jme3tools/shadercheck/: CgcValidator.html  Validator.html  (+3 more)
psd/: 1280x800.xcf  Back.psd  Clipboard.psd  Garbadge.psd  List Button.psd  Save.psd  Search.psd  add.psd  balloon_tag.psd  class.psd  classes.psd  clipboard2.psd  close.psd  config.psd  controls.psd  drop.psd  garbadge2.psd  goodbye.psd  loading.psd  loading_small.psd  logo.psd  open.psd  scrollbutton.psd  search2.psd  slider.psd  splash.xcf  video.psd
(+2645 files in other folders)
